<resources>
    <string name="app_name">FooZam</string>
    <string name="company_logo">Company Logo</string>
    <string name="title_scan">Scan</string>
    <string name="result_image">Result Image</string>
    <string name="title_keep_learning">Keep Learning</string>
    <string name="title_rare_find">Rare Find</string>
    <string name="title_community">Foodie Community</string>
    <string name="scan_photo">Scan Photo</string>
    <string name="title_home">Home</string>
    <string name="title_scan_fruit">Scan Fruit</string>
    <string name="title_predict">Predict Fruit</string>
    <string name="title_choose_picture">Choose Picture</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_try_another">Try Another One</string>
    <string name="recipe_label">Learn some cool recipes</string>
    <string name="title_explore">Explore</string>
    <string name="back_button_label">Back</string>
    <string name="recipes_image_view">Recipes Image View</string>
</resources>
